Fixed room labels from being cut off, reworked vnum range calc for rooms

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -717,3 +717,16 @@ i.fa-solid.fa-lock {
   border-radius: 4px;
   color: #fff;
 }
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  appearance: none;
+  margin: 0;
+  display: none;
+}
+
+input[type="number"] {
+  appearance: textfield;
+  -moz-appearance: textfield;
+}
